--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "markdown-it": "^13.0.1",
     "moment": "^2.29.0",
     "node-sass": "^6.0.0",
+    "openai": "^3.1.0",
     "react": "^17.0.2",
     "react-auth-wrapper": "^1.0.0",
     "react-autosuggest": "^10.1.0",
+    "react-bootstrap": "^2.7.0",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-custom-scrollbars": "^4.2.1",
@@ -23,6 +25,7 @@
     "react-flatpickr": "^3.10.7",
     "react-image-lightbox": "^5.1.4",
     "react-intl": "^5.20.2",
+    "react-loading-overlay": "^1.0.1",
     "react-markdown": "^8.0.4",
     "react-markdown-editor-lite": "^1.3.3",
     "react-redux": "^7.2.4",
